# simple_vehicle_counting

./: .gitignore  .gitmodules  CMakeLists.txt  Demo.cpp  README.md  run_python_demo.sh  run_simple_vehicle_counting.sh
config/: BlobTracking.xml  PixelBasedAdaptiveSegmenter.xml  VehicleCouting.xml
lib/x86/vc12/: libjasper.lib  libjpeg.lib  libpng.lib  libtiff.lib  opencv_highgui2410.lib  opencv_video2410.lib  zlib.lib
package_analysis/: VehicleCouting.cpp  VehicleCouting.h
package_bgs/: IBGS.h
package_bgs/PBAS/: PBAS.cpp  PBAS.h  PixelBasedAdaptiveSegmenter.cpp  PixelBasedAdaptiveSegmenter.h
package_tracking/: BlobTracking.cpp  BlobTracking.h
package_tracking/cvblob/: cvaux.cpp  cvblob.cpp  cvblob.h  cvlabel.cpp
python/: demo.py
python/analysis/: CMakeLists.txt  _VehicleCounting.cpp  __init__.py
python/bgs/: CMakeLists.txt  _IBGS.cpp  _IBGS.hpp  __init__.py
python/bgs/pbas/: CMakeLists.txt  _PixelBasedAdaptiveSegmenter.cpp  __init__.py
python/cvb/: CMakeLists.txt  __init__.py  _cvblob.cpp
python/tracking/: CMakeLists.txt  _BlobTracking.cpp  __init__.py
vs2013/: project.sln  project.vcxproj  project.vcxproj.filters
